<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainWnd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="flipCard"
    tools:context=".LibActivity"
    tools:showIn="@layout/activity_lib">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/tv1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_txt_pay_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:paddingTop="48dp"
        android:text="@string/txt_pay_amount"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--=========================================================================================-->
    <!--android:background="@android:color/transparent"-->

    <FrameLayout
        android:id="@+id/card_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/card_back" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/card_front"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <include layout="@layout/card_front" />

    </FrameLayout>

    <!--=========================================================================================-->


    <Button
        android:id="@+id/btn_get_otp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/txt_btn_get_otp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sec_code"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="402dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_sec_code"
        android:inputType="number"
        android:maxLength="6"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="452dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/txt_btn_pay"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/title_activity_lib"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/idauthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="4dp"
        android:gravity="right"
        android:text="@string/authname"
        android:textSize="10sp" />
</RelativeLayout>