<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gold_card"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/card_chip"
                android:contentDescription="@string/title_activity_lib" />

            <ImageView
                android:id="@+id/idBankLogo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/title_activity_lib"
                android:scaleType="fitStart" />

            <EditText
                android:id="@+id/card_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="84dp"
                android:hint="@string/hint_card_num"
                android:inputType="number"
                android:maxLength="19"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/card_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="134dp"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/hint_card_exp"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="160dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>